--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -42,8 +42,8 @@
 </div> -->
 
 <!-- 
-<div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
-<div class="tooltip_purple"><span>Extra Discount</span><div class="tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
+<div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
+<div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
 
 <p>run out of stock soon</p>
 -->
@@ -150,7 +150,7 @@
     <p><a target="_blank" href="https://amzn.to/2K8VAoS">KobraTech Cell Phone Tripod TriFlex Mini Tripod for iPhone & Android Includes Bluetooth Remote Shutter</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$29.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -169,7 +169,7 @@
     <p><a target="_blank" href="https://amzn.to/2yxyKAA">Architec Recipe Rock, White, Magnetic Recipe Holder</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$11.17</span><span class="ori_price">$12.41</span>
-        <div class="tooltip_purple"><span>Extra Discount</span><div class="tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
+        <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -324,7 +324,7 @@
     <p><a target="_blank" href="https://amzn.to/2Zqy5gg">Hello Oral Care Activated Charcoal Fluoride Free and SLS Free Whitening Toothpaste Starter Kit with Extra Freshening ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$22.17</span><span class="ori_price">$25.29</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -377,7 +377,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZmVoaG">Teknor Apex Neverkink, 8844-100, PRO Water Hose, 5/8-in x 100-feet</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$33.99</span><span class="ori_price">$68.30</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       </address>
       <%= render 'deals/notes' %>
     </div>
