--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -38,8 +38,8 @@
  -->
 
 <!-- Extra Discount
- <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
- <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+ <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+ <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
 
  <p>run out of stock soon</p>
 -->
@@ -55,7 +55,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZpCgJ6">Radha Beauty Retinol Moisturizer Cream for Face - with Retinol, Hyaluronic Acid, Vitamin E and Green Tea. Best Night...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$12.92</span><span class="ori_price">$17.95</span>
-        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">28BETTERSKIN</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>28% off at $17.95</strong> with promo code: <strong class="m_codes">28BETTERSKIN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 09, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -75,6 +75,7 @@
     <p><a target="_blank" href="https://amzn.to/2YEvI8r">Case for iPhone 8 Plus/iPhone 7 Plus, Liquid Silicone Ultra Thin with Cover Free Tempered Screen Protector...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$8.39</span><span class="ori_price">$13.99</span></address>
+
       <textarea readonly="readonly" class="code_area">40ZLI6RV</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $13.99</strong> with promo code: <strong class="m_codes">40ZLI6RV</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -183,7 +184,7 @@
     <p><a target="_blank" href="https://amzn.to/2YiGiqd">Hair Straightener Brush - Straightening Comb with Anti-Scald, 30s Fast Ceramic Heating, 5 Heat Levels, Auto Off,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$41.39</span><span class="ori_price">$45.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">10TYMOBRUSH</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>10% off at $45.99</strong> with promo code: <strong class="m_codes">10TYMOBRUSH</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 03, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -221,7 +222,7 @@
     <p><a target="_blank" href="https://amzn.to/2YAcfWd">WECODO Slim Portable Charger 5000mAh Power Bank Built-in Cable Pocket External Battery Pack with LED Indicator...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$9.59</span><span class="ori_price">$15.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">403OQYAY</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $15.99</strong> with promo code: <strong class="m_codes">403OQYAY</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -241,7 +242,7 @@
     <p><a target="_blank" href="https://amzn.to/2K9rX6K">Laptop Backpack, Extra Large 17 Inch Business Travel Backpack with USB Charging Port Earphone Hole, Durable Water...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$26.65</span><span class="ori_price">$42.99</span>
-        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">387VC1UA</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>38% off at $42.99</strong> with promo code: <strong class="m_codes">387VC1UA</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 02, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -279,7 +280,7 @@
     <p><a target="_blank" href="https://amzn.to/339F8we">COOAU 17.9" Portable DVD Player with 15.6" Large Swivel Screen, 6 Hrs Long Lasting Built-in Battery, Region Free, Stereo Sound,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$53.99</span><span class="ori_price">$107.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">5072E46R</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>50% off at $107.99</strong> with promo code: <strong class="m_codes">5072E46R</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 02, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -389,7 +390,7 @@
     <p><a target="_blank" href="https://amzn.to/2YF8qz4">Ecstacy Soaps - Gift Box Set of 9 x 25 Gram Bars </a></p>
     <div class="code_high">
       <address><span class="dis_price">$7.46</span><span class="ori_price">$9.95</span>
-        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">25EME1MN</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>25% off at $9.95</strong> with promo code: <strong class="m_codes">25EME1MN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 09, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
