--- a/app/views/deals_days/_day_01.html.erb
+++ b/app/views/deals_days/_day_01.html.erb
@@ -229,7 +229,7 @@
     <p><a target="_blank" href="https://amzn.to/31bQfmt">Lifetime Replacement Guarantee ToiletTree Professional Water Resistant Heavy Duty Steel Nose Trimmer with LED Light, Silver </a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$16.16</span><span class="ori_price">$17.95</span>
-        <div class="tooltip_purple"><span>Extra Discount</span><div class="tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
+        <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -367,7 +367,7 @@
     <p><a target="_blank" href="https://amzn.to/314Jqmr">Tuft & Needle Queen Mattress, Bed in a Box, T&N Adaptive Foam, Sleeps Cooler with More Pressure Relief & Support Than Memory Foam,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$505.75</span><span class="ori_price">$595.00</span>
-        <div class="tooltip_purple"><span>Extra Discount</span><div class="tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
+        <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -403,7 +403,7 @@
     <p><a target="_blank" href="https://amzn.to/2LTHREj">Delta Children Universal 6 Drawer Dresser, Grey </a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$248.24</span><span class="ori_price">$269.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -456,7 +456,7 @@
     <p><a target="_blank" href="https://amzn.to/2SZs1Ji">iSteam Luxury Edition Steamer Technology [New] 8-in-1 Powerful: Clothes Wrinkle Remover- Clean- Sterilize- ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$37.99</span><span class="ori_price">$49.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
