--- a/app/views/deals_days/_day_02.html.erb
+++ b/app/views/deals_days/_day_02.html.erb
@@ -77,7 +77,7 @@
     <p><a target="_blank" href="https://amzn.to/2SVRSlc">Mpow Flame Bluetooth Headphones Waterproof IPX7, Wireless Earbuds Sport, Richer Bass HiFi Stereo in-Ear Earphones w/Case,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$14.99</span><span class="ori_price">$19.99</span>
-        <div class="tooltip_purple"><span>Extra Discount</span><div class="tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
+        <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -96,7 +96,7 @@
     <p><a target="_blank" href="https://amzn.to/2yuoB7H">Headache Hat - The Original Wearable Ice Pack for Migraine Headaches and Tension Relief - Regular Size </a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$35.99</span><span class="ori_price">$39.99</span>
-        <div class="tooltip_purple"><span>Extra Discount</span><div class="tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
+        <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -166,7 +166,7 @@
     <p><a target="_blank" href="https://amzn.to/310vpq2">LEVOIT Purifier for Home Large Room with True HEPA Filter Air Cleaner for Allergies and Pets, Smokers, Mold, Pollen,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$299.99</span><span class="ori_price">$399.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -304,7 +304,7 @@
     <p><a target="_blank" href="https://amzn.to/2OH1NMS">Tactica Multitool M100 - TSA compliant, Tech Friendly, Strong and Lightweight with 2 x 1/4 inch Driver Heads included...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$34.95</span><span class="ori_price">$39.95</span>
-        <div class="tooltip_purple"><span>Extra Discount</span><div class="tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
+        <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -510,7 +510,7 @@
     <p><a target="_blank" href="https://amzn.to/2LTpxeu">WaterVault Neoprene Bottle Holder, Adjustable Detachable Strap, Shoulder Sling & Hand Carrier Available in 2 Sizes: Regular...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$13.46</span><span class="ori_price">$14.95</span>
-        <div class="tooltip_purple"><span>Extra Discount</span><div class="tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
+        <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
       <%= render 'deals/notes' %>
     </div>
