--- a/app/views/deals_days/_day_03.html.erb
+++ b/app/views/deals_days/_day_03.html.erb
@@ -70,7 +70,7 @@
     <p><a target="_blank" href="https://amzn.to/2JTKCUc">Samsung Galaxy Tab A 10.1 128 GB WiFi Tablet Black (2019)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$299.99</span><span class="ori_price">$329.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -429,7 +429,7 @@
     <p><a target="_blank" href="https://amzn.to/2JSJ4JV">Wireless Earbuds GUSGU Bluetooth 5.0 Earbuds Noise Cancelling Waterproof Wireless Headphones 145H Cycle...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$33.99</span><span class="ori_price">$49.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
