--- a/app/views/deals_days/_day_04.html.erb
+++ b/app/views/deals_days/_day_04.html.erb
@@ -409,7 +409,7 @@
     <p><a target="_blank" href="https://amzn.to/2SJjYAg">OXO Good Grips Salad Spinner, Large, Clear</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$26.39</span><span class="ori_price">$29.90</span>
-        <div class="tooltip_purple"><span>Extra Discount</span><div class="tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
+        <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
       <%= render 'deals/notes' %>
     </div>
