--- a/app/views/deals_days/_day_05.html.erb
+++ b/app/views/deals_days/_day_05.html.erb
@@ -94,7 +94,7 @@
     <p><a target="_blank" href="https://amzn.to/33009JJ">TP-Link | AC750 WiFi Extender - Dual Band Cloud App Control | 2019 Release | Up to 750Mbps | One Button Setup Repeater,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$24.99</span><span class="ori_price">$29.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -147,7 +147,7 @@
     <p><a target="_blank" href="https://amzn.to/2LKjgBZ">Crest 3D White Toothpaste Radiant Mint 4.8 oz (3 pack) </a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$9.97</span><span class="ori_price">$12.59</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -234,7 +234,7 @@
     <p><a target="_blank" href="https://amzn.to/2SISQ46">Swiffer WetJet Hardwood and Floor Spray Mop Cleaner Starter Kit, Includes: 1 Power Mop, 5 Pads, Cleaner Solution, Batteries </a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$22.97</span><span class="ori_price">$74.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -253,7 +253,7 @@
     <p><a target="_blank" href="https://amzn.to/2SO5grI">Babyganics Face, Hand & Baby Wipes, Fragrance Free, 400 ct, Packaging May Vary</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$13.59</span><span class="ori_price">$21.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -510,7 +510,7 @@
     <p><a target="_blank" href="https://amzn.to/2JWZD7y">Hammermill Paper, Tidal Copy Paper, 8.5 x 14 Paper, Legal Paper, 20lb Paper, 92 Bright, 10 Reams / 5,000 Sheets (162016C) Acid Free Paper</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$92.89</span><span class="ori_price">$308.30</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
