--- a/app/views/deals_days/_day_06.html.erb
+++ b/app/views/deals_days/_day_06.html.erb
@@ -223,7 +223,7 @@
     <p><a target="_blank" href="https://amzn.to/2SKvpYh">Keurig 2.0 Thermal Carafe, 32oz Double-Walled, Vacuum-Insulated, Stainless Steel Carafe, Holds and Dispenses...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$12.95</span><span class="ori_price">$29.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -327,7 +327,7 @@
     <p><a target="_blank" href="https://amzn.to/2OpBV8o">Tide Laundry Detergent Liquid, Original Scent, HE Turbo Clean, 100 oz, 64 Loads </a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$11.99</span><span class="ori_price">$16.00</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -448,7 +448,7 @@
     <p><a target="_blank" href="https://amzn.to/2LNDYkA">LEVOIT Air Purifier for Home Smokers Allergies and Pets Hair, True HEPA Filter, Quiet in Bedroom, Filtration ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$69.99</span><span class="ori_price">$89.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -620,7 +620,7 @@
     <p><a target="_blank" href="https://amzn.to/2YsI9YV">True Chews Premium Jerky Cuts Made with Real Steak</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$10.99</span><span class="ori_price">$22.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
