--- a/app/views/deals_days/_day_07.html.erb
+++ b/app/views/deals_days/_day_07.html.erb
@@ -9,7 +9,7 @@
     <p><a target="_blank" href="https://amzn.to/316psrz">Sweet Home Stores Cozy Shag Collection Solid Shag Rug Contemporary Living & Bedroom Soft Shaggy Area Rug,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$21.83</span><span class="ori_price">$29.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -28,7 +28,7 @@
     <p><a target="_blank" href="https://amzn.to/30YNtAK">Joseph Joseph 45002 M-Cuisine Microwave Rice Cooker</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$15.00</span><span class="ori_price">$25.00</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -199,7 +199,7 @@
     <p><a target="_blank" href="https://amzn.to/2SNxySU">WALI Wall Outlet Shelf Standard Vertical Duplex Décor Outlet with Cable Channel Charging for Cell Phone,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$11.99</span><span class="ori_price">$19.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -286,7 +286,7 @@
     <p><a target="_blank" href="https://amzn.to/2LOKFCJ">Mpow 059 Bluetooth Headphones Over Ear, Hi-Fi Stereo Wireless Headset, Foldable, Soft Memory-Protein Earmuffs,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$31.49</span><span class="ori_price">$34.99</span>
-        <div class="tooltip_purple"><span>Extra Discount</span><div class="tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
+        <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -339,7 +339,7 @@
     <p><a target="_blank" href="https://amzn.to/2K4apJg">Wireless Earbuds GUSGU Bluetooth 5.0 Earbuds Noise Cancelling Waterproof Wireless Headphones 145H Cycle ...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$33.99</span><span class="ori_price">$49.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -426,7 +426,7 @@
     <p><a target="_blank" href="https://amzn.to/317gWc2">Head and Shoulders Shampoo and Conditioner 2 in 1, Anti Dandruff Treatment, Charcoal for Men, 12.8 fl oz, Twin Pack </a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$8.40</span><span class="ori_price">$12.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -513,7 +513,7 @@
     <p><a target="_blank" href="https://amzn.to/2LOHQl3">Winsome Wood TV Table, Dark Espresso Finish, Set of 4</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$42.31</span><span class="ori_price">$114.00</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
@@ -549,7 +549,7 @@
     <p><a target="_blank" href="https://amzn.to/2K5gkhe">SINGER | | Quantum Stylist 9960 Computerized Portable Sewing Machine with 600-Stitches Electronic Auto Pilot Mode,...</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$299.00</span><span class="ori_price">$699.99</span>
-        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+        <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
       <%= render 'deals/notes' %>
     </div>
