--- a/app/views/promocodes_days/_day_04.html.erb
+++ b/app/views/promocodes_days/_day_04.html.erb
@@ -27,7 +27,7 @@
     <p><a target="_blank" href="https://www.amazon.com/promocode/AC8WXS405V51A/ref=as_li_ss_tl?ie=UTF8&linkCode=sl2&tag=3628-20&linkId=9061df92da479d7091a0070b7a05f893&language=en_US">TYRY.HU Pacifier Clips Silicone Teething Beads BPA Free Binky Holder for Girls, Boys, Baby Shower Gift, Teether Toys, Soothie, Mam, Drool Bibs, Set of 2 (Pink, Blue) </a></p>
     <div class="code_high">
       <address><span class="dis_price">$7.79</span><span class="ori_price">$12.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">40WATLRU</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $12.99</strong> with promo code: <strong class="m_codes">40WATLRU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 03, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -65,7 +65,7 @@
     <p><a target="_blank" href="https://www.amazon.com/promocode/AU2XKVCL3BJCQ/ref=as_li_ss_tl?ie=UTF8&linkCode=sl2&tag=3628-20&linkId=56228537b16ba2b35000da2d32fdfe9c&language=en_US">Veckle Waterproof Case, 4 Pack Floating Waterproof Cell Phone Pouch Universal TPU Clear Water Proof Dry Beach Bag for iPhone X 8 7 6S 6 Plus, Samsung Galaxy S9 S8 S7 S6, Note 5...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$8.99</span><span class="ori_price">$14.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">40O2TJ7Q</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $14.99</strong> with promo code: <strong class="m_codes">40O2TJ7Q</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 30, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -122,7 +122,7 @@
     <p><a target="_blank" href="https://www.amazon.com/promocode/A2VJD0EL9640KZ/ref=as_li_ss_tl?ie=UTF8&linkCode=sl2&tag=3628-20&linkId=6832c2b902d631f71576db92d4e9d32e&language=en_US">Bluetooth Speaker,Wireless Bluetooth Speaker with AUX/USB/TF Card Slot,Louder Volume,Crystal Clear Stereo Sound,Microphone,Wireless Stereo Pairing Compatible with...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$19.99</span><span class="ori_price">$24.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">20YVX4LK</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>20% off at $24.99</strong> with promo code: <strong class="m_codes">20YVX4LK</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -142,7 +142,7 @@
     <p><a target="_blank" href="https://www.amazon.com/promocode/A1S6QT9DUNXN75/ref=as_li_ss_tl?ie=UTF8&linkCode=sl2&tag=3628-20&linkId=5b5281fb026d93cdbd27915a4cb2c039&language=en_US">YJY Car Diffuser for Essential Oils Portable Home Humidifier, Ultrasonic None-Sponge-Wick USB Aromatherapy Intermittent Mode,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$14.99</span><span class="ori_price">$19.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">25YMLNB7</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>25% off at $19.99</strong> with promo code: <strong class="m_codes">25YMLNB7</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 02, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -198,7 +198,7 @@
     <p><a target="_blank" href="https://amzn.to/2K71RBz">Power Strip Tower - EVAIKON Extension Cord with 8 Outlet 4 USB Ports 3000W/13A Surge Protector Electric Charging Station...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$18.39</span><span class="ori_price">$22.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">20QYF8AB</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>20% off at $22.99</strong> with promo code: <strong class="m_codes">20QYF8AB</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 02, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -290,8 +290,8 @@
     <p><a target="_blank" href="https://amzn.to/2GzzPMA">Gel Seat Cushion,Suptempo Thick Big Gel Seat Cushion,The Latest Modified Double Gel Seat Cushion, for Pressure...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$16.17</span><span class="ori_price">$32.99</span>
-        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">51DDI1KZ</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>51% off at $32.99</strong> with promo code: <strong class="m_codes">51DDI1KZ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 22, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -419,7 +419,7 @@
     <p><a target="_blank" href="https://amzn.to/312VuEJ">Power Bank 24000mAh Portable Charger Huge Capacity Charge External Battery Pack Dual Inputs & Three Output with LCD Display,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$25.19</span><span class="ori_price">$35.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">30SPU4A2</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>30% off at $35.99</strong> with promo code: <strong class="m_codes">30SPU4A2</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 11, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -439,8 +439,8 @@
     <p><a target="_blank" href="https://amzn.to/2LVqO59">Bluetooth 5.0 Earbuds, True Wireless Earbuds Bluetooth Headphones with Mic Wireless Headphones Mini Headset Sweatproof...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$24.50</span><span class="ori_price">$48.99</span>
-        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">5081P23Q</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>50% off at $48.99</strong> with promo code: <strong class="m_codes">5081P23Q</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 08, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
