--- a/app/views/promocodes_days/_day_05.html.erb
+++ b/app/views/promocodes_days/_day_05.html.erb
@@ -9,7 +9,7 @@
     <p><a target="_blank" href="https://amzn.to/2SUXWKO">Motion Sensor Headlamp, Boosiny Brightest High 6000 Lumen LED T6 Work Headlight, 18650 USB Rechargeable Waterproof Headlight...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$16.79</span><span class="ori_price">$27.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">40ZZP2FS</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $27.99</strong> with promo code: <strong class="m_codes">40ZZP2FS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 23, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -29,7 +29,7 @@
     <p><a target="_blank" href="https://amzn.to/318b55U">Kitchen Utensils Set, Cooking Utensils Set, 22 Silicone Kitchen Utensil Set, Kitchen Cooking Tool...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$17.99</span><span class="ori_price">$29.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">40JKLGUX</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $29.99</strong> with promo code: <strong class="m_codes">40JKLGUX</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 15, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -141,7 +141,7 @@
     <p><a target="_blank" href="https://amzn.to/2LQSckG">Under Eye Cream by Majestic Pure - Age Defying Retinal - Reduces the Appearances of Wrinkles, Dark Circles, Puffiness,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$8.60</span><span class="ori_price">$21.50</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">60EMB24P</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>60% off at $21.50</strong> with promo code: <strong class="m_codes">60EMB24P</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -197,7 +197,7 @@
     <p><a target="_blank" href="https://amzn.to/2YGKnEh">20000mAh Portable Charger, Quick Charge 3.0 Dual Input Output Typec-C Port with LCD Display High Capacity Power Bank,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$19.49</span><span class="ori_price">$29.99</span>
-        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">35NMYFN2</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>35% off at $29.99</strong> with promo code: <strong class="m_codes">35NMYFN2</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -307,7 +307,7 @@
     <p><a target="_blank" href="https://amzn.to/2Mu09vm">ZHMA 100W LED Flood Light, Waterproof IP65 Super Bright Outdoor Work Light With US 3-Plug,LED Work Light,500W Halogen...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$22.19</span><span class="ori_price">$36.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">40Z7J3NF</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $36.99</strong> with promo code: <strong class="m_codes">40Z7J3NF</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 02, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -327,7 +327,7 @@
     <p><a target="_blank" href="https://amzn.to/314NVgP">Head Scratcher Pack of 2, Scalp Massager Tool for Stress Relief (Random Colors)</a></p>
     <div class="code_high">
       <address><span class="dis_price">$4.50</span><span class="ori_price">$8.99</span>
-        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">50PLXINK</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>50% off at $8.99</strong> with promo code: <strong class="m_codes">50PLXINK</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
