--- a/app/views/promocodes_days/_day_07.html.erb
+++ b/app/views/promocodes_days/_day_07.html.erb
@@ -27,7 +27,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
     <p><a target="_blank" href="https://amzn.to/2SQrnxL">Car Dash Cam, Dashboard Camera Recorder with 32GB SD Card, MELCAM FHD 1080P, 3" LCD Screen, Driving Recorder...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$39.48</span><span class="ori_price">$140.99</span>
-        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">727F29RX</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>72% off at $140.99</strong> with promo code: <strong class="m_codes">727F29RX</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -65,7 +65,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
     <p><a target="_blank" href="https://amzn.to/2YlkF3U">Janazan Waterproof iPhone XR Case, Full Sealed Underwater Protective Cover, Waterproof Shockproof Snowproof Dirtproof ...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$13.41</span><span class="ori_price">$17.88</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">25NEIMBB</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>25% off at $17.88</strong> with promo code: <strong class="m_codes">25NEIMBB</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -103,8 +103,8 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
     <p><a target="_blank" href="https://amzn.to/2YmD6F9">20000mAh Portable Charger, Quick Charge 3.0 Dual Input Output Typec-C Port with LCD Display High Capacity Power Bank,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$14.39</span><span class="ori_price">$23.99</span>
-        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">401WZXHN</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $23.99</strong> with promo code: <strong class="m_codes">401WZXHN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 26, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -160,7 +160,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
     <p><a target="_blank" href="https://amzn.to/2SQteTf">Dental Tools Stainless Steel Dental Pick Dental Floss Dental Hygiene Tool Set Tooth Scraper Plaque Tartar Remover Dental ...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$8.25</span><span class="ori_price">$11.79</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">30BWSF9P</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>30% off at $11.79</strong> with promo code: <strong class="m_codes">30BWSF9P</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 26, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -216,7 +216,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
     <p><a target="_blank" href="https://amzn.to/32TJtmY">Bluetooth Headphones, HSPRO Wireless Earbuds, IPX7 Waterproof Sports Headphones Bluetooth Earbuds,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$11.39</span><span class="ori_price">$18.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">40P24M94</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $18.99</strong> with promo code: <strong class="m_codes">40P24M94</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 17, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -272,7 +272,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
     <p><a target="_blank" href="https://amzn.to/32SxvKn">13 Inch Dimmable LED Flush Mount Ceiling Light, 15W(100W Equivalent), 4000k Natural White, 1200Lumens, 110V,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$23.99</span><span class="ori_price">$39.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">4097NJ2D</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $39.99</strong> with promo code: <strong class="m_codes">4097NJ2D</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -328,7 +328,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
     <p><a target="_blank" href="https://amzn.to/2SFEWjm">G-FAVOR Laptop Backpack, Business Travel Backpack with USB Charging Port for Women Men, College School Bag Computer Backpacks,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$23.39</span><span class="ori_price">$38.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">40F1NUXY</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $38.99</strong> with promo code: <strong class="m_codes">40F1NUXY</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -402,7 +402,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
     <p><a target="_blank" href="https://amzn.to/2LHlnGJ">Upgrade LED Outdoor Spotlight, Greenclick 4 Pack 12V Low Voltage Landscape Lighting Warm White IP65 Waterproof...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$29.99</span><span class="ori_price">$49.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">40ZHMKD1</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $49.99</strong> with promo code: <strong class="m_codes">40ZHMKD1</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><%= render 'deals/notes' %>
@@ -422,7 +422,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
     <p><a target="_blank" href="https://amzn.to/2JUeNus">24 Organic & Natural Bath Bombs, Handmade Bubble Bath Bomb Gift Set, Rich in Essential Oil, Shea Butter, Coconut Oil,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$19.75</span><span class="ori_price">$24.69</span>
-        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">20VI1MOH</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>20% off at $24.69</strong> with promo code: <strong class="m_codes">20VI1MOH</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 06, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -442,7 +442,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
     <p><a target="_blank" href="https://amzn.to/2LEHtJT">CONQUECO Portable Coffee Espresso Maker Travel Coffee Maker K-Cup Capsule and Ground Portable Coffee Machine Perfect...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$52.79</span><span class="ori_price">$59.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">12FGQLBN</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>12% off at $Origianl_price</strong> with promo code: <strong class="m_codes">12FGQLBN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 20, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -516,7 +516,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
     <p><a target="_blank" href="https://amzn.to/2yf1j5U">ZHMA 2 Pack 100W LED Flood Light, Super Bright Work Lights, 9000ml, 6500k White Light Bulbs, IP66 Waterproof...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$29.00</span><span class="ori_price">$57.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">501U61ZQ</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>50% off at $57.99</strong> with promo code: <strong class="m_codes">501U61ZQ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
