--- a/app/views/promocodes_days/_day_01.html.erb
+++ b/app/views/promocodes_days/_day_01.html.erb
@@ -27,7 +27,7 @@
     <p><a target="_blank" href="https://amzn.to/2ycUm5g">Mirror Dash Cam Backup Camera 9.88" Full HD Touch Screen Car Dash Camera Stream Media Dual Lens 170° 1080P Front and...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$95.24</span><span class="ori_price">$126.99</span>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">25ZFQQGD</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>25% off at $126.99</strong> with promo code: <strong class="m_codes">25ZFQQGD</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
@@ -209,8 +209,8 @@
     <p><a target="_blank" href="https://amzn.to/2JUYLjV">Hair Cutting Scissors/Thinning Shears/Professional Barber/Salon Razor Edge Tools set/Mustache Scissors and Barber Scissors...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$11.19</span><span class="ori_price">$15.99</span>
-        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
-        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
       <textarea readonly="readonly" class="code_area">30AL4LTI</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>30% off at $15.99</strong> with promo code: <strong class="m_codes">30AL4LTI</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
