--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -70,6 +70,7 @@
   .codes .card_wrap .card .inner>.code_high>address>.amz_prime{color:#e47911;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
 
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:none;}
   .codes .card_wrap .card .inner>.code_high .tooltip_common{margin-left:10px;position:relative;display:inline;color:#fff;padding:0 10px;border-radius:10px;}
   .codes .card_wrap .card .inner>.code_high .tooltip_common:hover .tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high .content_common{visibility:hidden;width:400px;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
@@ -151,21 +152,18 @@
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
 
-  .codes .card_wrap .card .inner>.code_high .tooltip_red{margin-left:10px;position:relative;display:inline;background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_red>.tooltip-content{visibility:hidden;width:270%;background:#ff4d4d;padding:5px;color:white;text-align:center;position:absolute;z-index:1;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_red:hover>.tooltip-content{visibility: visible;}
-  
-  .codes .card_wrap .card .inner>.code_high .tooltip_common{margin-left:10px;position:relative;display:inline;color:#fff;padding:0 10px;border-radius:10px;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_common:hover .tooltip-content{visibility: visible;}
-  .codes .card_wrap .card .inner>.code_high .content_common{visibility:hidden;width:400px;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_red{background:#ff4d4d;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_red .tooltip-content{background:#ff4d4d;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_green{background:#87c442;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_green .tooltip-content{background:#87c442;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_orange{background:#e47911;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_orange .tooltip-content{background:#e47911;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_purple{background:#b400b4;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_purple .tooltip-content{background:#b400b4;}
+  .codes .card_wrap .card .inner>.code_high .tooltip_common{display:none;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:block;position:relative;display:inline;color:#fff;padding:0 10px;border-radius:10px;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_common:hover .m_tooltip-content{visibility: visible;}
+  .codes .card_wrap .card .inner>.code_high .m_content_common{visibility:hidden;width:355px;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_red{background:#ff4d4d;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_red .m_tooltip-content{background:#ff4d4d;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_green{background:#87c442;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_green .m_tooltip-content{background:#87c442;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_orange{background:#e47911;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_orange .m_tooltip-content{background:#e47911;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_purple{background:#b400b4;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_purple .m_tooltip-content{background:#b400b4;}
 
   .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>p{display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
@@ -207,6 +205,19 @@
   .codes .rt_cnt .sort_box ul li{float:left;width:17.7%;margin:1%;}
   .codes .card_wrap .card .inner>.code_high>.mobile_code{display:block;margin-bottom:13px;}
   .codes .card_wrap .card .inner>.code_high>p>span>.m_codes{background:#000;color:#fff;padding:5px 10px;border-radius:10px;line-height:38px;}
+
+  .codes .card_wrap .card .inner>.code_high .tooltip_common{display:none;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:block;position:relative;display:inline;color:#fff;padding:0 10px;border-radius:10px;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_common:hover .m_tooltip-content{visibility: visible;}
+  .codes .card_wrap .card .inner>.code_high .m_content_common{visibility:hidden;width:370px;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_red{background:#ff4d4d;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_red .m_tooltip-content{background:#ff4d4d;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_green{background:#87c442;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_green .m_tooltip-content{background:#87c442;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_orange{background:#e47911;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_orange .m_tooltip-content{background:#e47911;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_purple{background:#b400b4;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_purple .m_tooltip-content{background:#b400b4;}
 }
 
 /* Section Coupons */
